# hipp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
data/test_images/: querying_test_images.py
docs/kh9pc/: PREPROCESSING.md
examples/: 1978_09_06_arizona_aerial.ipynb  1980_08_22_iceland_preproc.ipynb  1994_06_09_aerial_scg.ipynb  test.ipynb
examples/fiducials_preproc/: 1994_06_09_aerial_scg.ipynb
examples/result_comparaison/: comparaison.ipynb  detected_fiducials.json  df_detected.pkl  tf_matrix_1.json  tf_matrix_2.json
notebooks/: aerial_preprocessing.ipynb  kh9pc_collimation_processing.ipynb  kh9pc_collimation_rectification.ipynb  kh9pc_preprocessing.ipynb  line_detection.ipynb  test.ipynb
notebooks/data/aerial/: camera_model_intrinsics.csv
src/hipp/: __init__.py  image.py  intrinsics.py  math.py  tools.py  typing.py
src/hipp/aerial/: __init__.py  aerial_preprocessing.py  core.py  fiducials.py  fiducials.txt  intrinsics.py  quality_control.py
src/hipp/dataquery/: __init__.py  nagap.py  utils.py
src/hipp/kh9pc/: __init__.py  __main__.py  batch.py  cli.py  collimation_lines.py  core.py  fiducial_patterns.py  fiducials.py  fitting.py  image_mosaic.py  image_rectification.py  kh9_image_spec.py  lines_processing.py  mosaic.py  pipeline.py  quality_control.py  readme.md  types.py  utils.py  vertical_detector.py
src/hipp/kh9pc/qc/: __init__.py  collimation.py  fiducial.py  flat.py  poly.py  transform.py  vertical.py
src/hipp/kh9pc/rectification_strategy/: __init__.py  base.py  collimation_rectification_strategy.py  flat_rectification_strategy.py  poly_rectification_strategy.py  vertical_edges_estimator.py
src/hipp/kh9pc/restitution/: __init__.py  base.py  collimation.py  collimation_rectification_strategy.py  collimation_strategy.py  control_points.py  detectors.py  fiducial.py  fiducial_rectification_strategy.py  fiducial_strategy.py  flat.py  flat_rectification_strategy.py  flat_strategy.py  mixed.py  poly.py  (+12 more)
tests/: test_image.py  test_tools.py
tests/aerial/: conftest.py  test_core.py  test_fiducials.py
tests/kh9pc/: conftest.py  test_fiducial_strategy.py  test_poly_strategy.py  test_vertical_detection.py
(+6 files in other folders)
